Add social authentication via Google

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,15 @@
 <head>
    <title>Smart Discussion</title>
 </head>
+<body>
 <h1>Smart Discussion</h1>
+{% if user.is_authenticated %}
+      <p>Logged as {{ user.username }}</p>
+      <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+      <a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
+        Login
+      </a>
+    {% endif %}
+</body>
 </html>
